@@ -1,5 +1,11 @@
 2007-10-22  Robert Millan  <rmh@aybabtu.com>
 
+	* kern/i386/pc/startup.S: Remove `"kern/i386/realmode.S"'.  Include
+	`"../realmode.S"'.
+	Remove `"kern/i386/loader.S"'.  Include `"../loader.S"'.
+
+2007-10-22  Robert Millan  <rmh@aybabtu.com>
+
 	* conf/i386-pc.rmk (kernel_img_SOURCES): Remove `disk/i386/pc/biosdisk.c'.
 	(pkgdata_MODULES): Add `biosdisk.mod'.
 	(biosdisk_mod_SOURCES, biosdisk_mod_CFLAGS, biosdisk_mod_LDFLAGS): New
